--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Ian Reid",
   "license": "ISC",
   "dependencies": {
-    "arc-lib": "^1.3.1",
+    "arc-lib": "^2.2.0",
     "babel-core": "^6.21.0",
     "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
@@ -39,6 +39,7 @@
     "redux": "^3.6.0",
     "socket.io": "^1.7.1",
     "style-loader": "^0.13.1",
+    "styled-components": "^2.1.2",
     "webpack": "^1.14.0"
   },
   "devDependencies": {
